--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,11 @@
   margin: 3px -4px -27px -11px;
   border: 2px solid #000;
   position: absolute;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
 }
 
 .hidden {
